# itkwidgets

./: .gitignore  .gitmodules  .readthedocs.yml  MANIFEST.in  README.md  README.rst  RELEASE.md  environment.yml  itk-jupyter-widgets.json  itkwidgets.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  treebeard.yaml
.binder/: environment.yml  postBuild
.circleci/: config.yml
.github/workflows/: build-test.yml  notebook-test.yml  publish.yml  release-tag.yml
binder/: environment.yml  postBuild
docker/: Dockerfile  environment.yml  labextensions.txt
docs/: Makefile  advanced.md  conf.py  deployments.md  deployments.rst  development.md  development.rst  index.md  index.rst  integrations.md  integrations.rst  quick_start_guide.md  quick_start_guide.rst  requirements.txt
docs/files/: Hello3DWorld.ipynb
docs/jupyterlite/: jupyterlite_config.json
docs/jupyterlite/files/: Hello3DWorld.ipynb
docs/jupyterlite/pypi/: dask_image-2022.9.0-py2.py3-none-any.whl
examples/: 2DImage.ipynb  3DImage.ipynb  CameraParameters.ipynb  Checkerboard.ipynb  CompareImages.ipynb  DaskArray.ipynb  EnvironmentCheck.ipynb  GettersAndSetters.ipynb  Hello3DWorld.ipynb  ImageJImgLib2.ipynb  ImageLabelStatistics.ipynb  ImageWithAnisotropicPixelSpacing.ipynb  InteractiveParameterExploration.ipynb  LabelImages.ipynb  LabelMap.ipynb  LabelMaps.ipynb  LargeVolumes.ipynb  LineProfile.ipynb  Mayavi.ipynb  Mesh.ipynb  NumPyArray.ipynb  NumPyArrayImage.ipynb  NumPyArrayPointSet.ipynb  PointBasedSpatialObject.ipynb  RecordAVideo.ipynb  SegmentationSkeleton.ipynb  SelectRegionOfInterest.ipynb  SpecifyAColormap.ipynb  SpecifyCameraParameters.ipynb  VisualizeImageLabels.ipynb  VolumeOpacityTransferFunction.ipynb  pyvista.PolyData.ipynb  pyvista.PolyDataAndImageData.ipynb  pyvista.StructuredGrid.ipynb  pyvista.UniformGrid.ipynb  pyvista.UnstructuredGrid.ipynb  pyvistaLiDAR.ipynb  scikit-image.ipynb  vedo.ipynb  vtkImageData.ipynb  (+4 more)
examples/integrations/MONAI/: transform_visualization.ipynb
examples/integrations/PyImageJ/: ImageJImgLib2.ipynb
examples/integrations/PyVista/: LiDAR.ipynb  UniformGrid.ipynb
examples/integrations/dask/: DaskArray.ipynb
examples/integrations/itk/: 3DImage.ipynb  DICOM.ipynb  IDC_Seg_Primer_Examples.ipynb  MulticomponentNumPy.ipynb  SelectROI.ipynb  ThinPlateSpline.ipynb
examples/integrations/itkwasm/: .gitignore  3DImage.ipynb  DICOM_SEG.ipynb  SelectROI.ipynb
examples/integrations/vtk/: vtkImageData.ipynb  vtkPolyDataPointSet.ipynb
examples/integrations/xarray/: DataArray.ipynb
examples/integrations/zarr/: OME-NGFF-Brainstem-MRI.ipynb
itkwidgets/: __init__.py  _initialization_params.py  _method_types.py  _to_itk.py  _transform_types.py  _type_aliases.py  _version.py  cell_watcher.py  cm.py  example.py  imjoy.py  lut.py  render_types.py  standalone.py  standalone_server.py  trait_types.py  view.py  viewer.py  viewer_config.py  widget_checkerboard.py  widget_compare.py  widget_imjoy_viewer.py  widget_label_statistics.py  widget_line_profiler.py  widget_viewer.py
itkwidgets/integrations/: __init__.py  dask.py  environment.py  itk.py  monai.py  pytorch.py  vtk.py  xarray.py
itkwidgets/standalone/: config.py  index.html  socketio-server.py
js/: .babelrc  README.md  babel.config.js  package-lock.json  package.json  webpack.config.js
js/lib/: embed.js  example.js  extension-jupyterlab.js  extension.js  index.js  itkConfigCDN.js  itkConfigJupyter.js  lineProfiler.js  viewer.js
js/lib/ZstdDecompress/: CMakeLists.txt  ZstdDecompress.cxx  input.bin.zstd
js/lib/ZstdDecompress/web-build/: ZstdDecompress.js  ZstdDecompressWasm.js  ZstdDecompressWasm.wasm
tests/: test_trait_types.py  test_transform_types.py
utilities/: RELEASE.md  release-notes.py
