[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "itkwidgets"
authors = [{name = "Matt McCormick", email = "matt.mccormick@kitware.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version",]
description = "An elegant Python interface for visualization on the web platform to interactively generate insights into multidimensional images, point sets, and geometry."
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    'Development Status :: 3 - Alpha',
    'Framework :: IPython',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Multimedia :: Graphics',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
keywords = [
    "jupyter",
    "jupyterlab-extension",
    "widgets",
    "itk",
    "imaging",
    "visualization",
    "webgl",
    "webgpu",
]

requires-python = ">=3.8"
dependencies = [
    "itkwasm >= 1.0b.78",
    "imjoy-rpc >= 0.5.42",
    "imjoy-utils >= 0.1.2",
    "ngff-zarr[dask-image] >= 0.4.3",
    "numcodecs",
    "zarr",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
  "/js/node_modules",
  "/examples",
]

[project.urls]
Home = "https://itkwidgets.readthedocs.io/en/latest/"
Documentation = "https://itkwidgets.readthedocs.io/en/latest/"
Source = "https://github.com/InsightSoftwareConsortium/itkwidgets"

[project.optional-dependencies]
all = [
    "imjoy-jupyterlab-extension ==0.1.13",
    "imjoy-elfinder[jupyter]",
    "imjoy-jupyter-extension ==0.3.0",
    "aiohttp <4.0"
]
lab = [
    "imjoy-jupyterlab-extension ==0.1.13",
    "imjoy-elfinder[jupyter]",
    "aiohttp <4.0"
]
cli = [
    "hypha >= 0.15.28",
    "imgcat",
    "IPython >= 8.4.0",
    "itk-io >= 5.3.0",
    "ngff-zarr[cli]",
    "playwright",
]

notebook = [
    "imjoy-jupyter-extension >=0.3.0",
    "imjoy-elfinder[jupyter]"
]
test = [
    "pytest >=2.7.3",
    "nbmake",
]
doc = ["sphinx"]

[project.scripts]
itkwidgets = "itkwidgets.standalone_server:cli_entrypoint"
